@startuml customModelFields

class TransactionGeneralRelief {
    - id
    - idTransaction
    - localGivenName
    - localFamilyName
    - enGivenName
    - enFamilyName
    - generalReliefs
    - distributedAt
    - values
    - notes
}

class GeneralRelief {
    - id
    - notes
    - distributedAt
}

class TransactionMobileMoney {
    - idTransaction
    - localGivenName
    - localFamilyName
    - enGivenName
    - enFamilyName
    - phones
    - state
    - values
    - pickupDate
    - message
}

class State {
    - id
    - name
}

class TransactionQRVoucher {
    - booklet
    - localGivenName
    - localFamilyName
    - enGivenName
    - enFamilyName
    - bookletCode
    - status
    - usedAt
    - value
    - products
}

class DistributionBeneficiary {
    - beneficiary
    - removed
    - justification
}



 Beneficiary "1" o-- "0-*" Booklet
 
 Beneficiary "1" *-- "0-*" DistributionBeneficiary
 Distribution "1" *-- "0-*" DistributionBeneficiary
 
 TransactionGeneralRelief "1" *-- "0-*" GeneralRelief
 
 
 TransactionMobileMoney "1" --* "1" State
 
 Booklet "1" *-- "1" TransactionQRVoucher
 

 DistributionBeneficiary <|-- TransactionGeneralRelief
 DistributionBeneficiary <|-- TransactionMobileMoney
 DistributionBeneficiary <|-- TransactionQRVoucher
@enduml